# Resilient

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
buildimg/: resilient-ubuntu16-gcc6.Dockerfile  resilient-ubuntu16-gcc7.Dockerfile  resilient-ubuntu16.Dockerfile
doc/doxygen/: Doxyfile  mainpage.md
doc/sphinx/source/: conf.py  index.rst
examples/retry_operation/: retry_operation.e.cpp
include/: resilient.hpp
include/resilient/: appendable_tuple.hpp  failure_detection.hpp  foldinvoke.hpp  job.hpp  resilient_main.hpp  result.hpp  tuple_utils.hpp
include/resilient/common/: README.md  base_variant.hpp  common.hpp  failable.hpp  foldinvoke.hpp  invoke.hpp  result.hpp  unique_types_tuple.hpp  utilities.hpp  variant.hpp  variant_boost.hpp  variant_utils.hpp
include/resilient/detail/: constref_util.hpp  foldinvoke.hpp  invoke.hpp  tuple_util.hpp  unique_types_tuple.hpp  utilities.hpp  variant_boost.hpp  variant_std.hpp  variant_utils.hpp
include/resilient/detector/: README.md  always.hpp  any.hpp  basedetector.hpp  callresult.hpp  detector.hpp  execution_context.hpp  never.hpp  returns.hpp  throws.hpp
include/resilient/failable/: failable.hpp
include/resilient/failures/: any.hpp  base_failure.hpp  failure_detection.hpp  never.hpp  returns.hpp
include/resilient/policies/: circuitbreaker.hpp  noop.hpp  pipeline.hpp  retry.hpp
include/resilient/policy/: README.md  circuitbreaker.hpp  noop.hpp  pipeline.hpp  policy.hpp  policy_utils.hpp  ratelimiter.hpp  retry.hpp
include/resilient/policy/circuitbreakerstrategy/: countstrategy.hpp
include/resilient/policy/ratelimiterstrategy/: blockingfixedconcurrentexecutionsstrategy.hpp
include/resilient/policy/retry/: retry.hpp  types.hpp
include/resilient/policy/retry/factory/: constructstate.hpp  constructstatefactory.hpp  copystatefactory.hpp  ctorretrystatefactory.hpp  referencestate.hpp  refretrystatefactory.hpp
include/resilient/policy/retry/state/: always.hpp  retries.hpp  retrytimes.hpp
include/resilient/task/: README.md  failable.hpp  failable_utils.hpp  task.hpp
test/: detector.t.cpp  failures.t.cpp  job.t.cpp  pipeline.t.cpp  policies.t.cpp  policy.t.cpp  resilient.t.cpp  task.t.cpp
test/common/: utility.t.hpp
test/detector/: detector.t.cpp
test/policy/: circuitbreaker.t.cpp  noop.t.cpp  pipeline.t.cpp  policy_common.t.hpp  ratelimiter.t.cpp  retry.t.cpp
test/policy/circuitbreakerstrategy/: countstrategy.t.cpp
test/policy/ratelimiterstrategy/: blockingfixedconcurrentexecutionsstrategy.t.cpp
test/task/: failable.t.cpp  job.t.cpp
